CSS/movies.css
* {
  padding: 0;
  margin: 0;
}

body {
  background-color: rgb(231, 231, 231);
  color: black;
}

:root {
  font-size: 16px;
  font-family: "Open Sans";
  --text-primary: #b6b6b6;
  --text-secondary: #ececec;
  --bg-primary: #23232e;
  --bg-secondary: #141418;
  --dark-color: #2b2b2b;
  --dark-icon-color: #fff;
  --light-color: #f7f7f7;
  --light-icon-color: #ffde59;
}

main {
  margin-left: 5rem;
  padding: 1rem;
}

.wrapper {
  width: 100%;
  height: 100%;
}

/* SCROLLBAR */
::-webkit-scrollbar {
  width: 0.6rem;
}

::-webkit-scrollbar-thumb {
  background: #ffffff32;
}

::-webkit-scrollbar-track {
  background: #1e1e24;
}

::-webkit-scrollbar-thumb:hover {
  background: #88888832;
}

/* NAVBAR */

.shift-content {
  transition: margin-left 0.6s ease-in-out;
}

.nav-bar:hover ~ main {
  margin-left: 14rem; 
}

.nav-bar {
  width: 5rem;
  height: 100vh;
  position: fixed;
  background-color: var(--bg-primary);
  transition: width 0.6s ease-in-out;
}

.nav-bar:hover {
  width: 14rem;
}

.nav-bar:hover .link-text {
  display: block;
}

.navbar-nav {
  padding: 0;
  height: 100%;
  display: flex;
  flex-direction: column;
  margin: 0;
  list-style: none;
  align-items: center;
}

.nav-item {
  width: 100%;
}

.nav-item:not(:last-child):hover {
  transition: 0.6s ease-in-out;
  background-color: rgb(107, 107, 107);
}

.nav-item:last-child {
  margin-top: auto;
}

.theme-link:hover {
  cursor: default;
}

.nav-link {
  cursor: pointer;
  display: flex;
  align-items: center;
  height: 5rem;
  color: var(--text-primary);
  text-decoration: none;
}

#search-input {
  width: 4.5rem;
  border-radius: 5rem;
  display: none;
}

.link-text {
  display: none;
  margin-left: 1rem;
}

.nav-link .navbar-icon  {
  width: 2rem;
  min-width: 2rem;
  margin: 0 1.5rem;
}

/* ---------------THEME--------------- */
.navbar-icon {
  color: rgb(210, 210, 210);
}

.button {
  background-color: var(--text-primary);
  border-radius: 5rem;
  display: flex;
  align-items: center;
  cursor: pointer;
  position: relative;
  min-width: 4rem ;
  margin: 1rem;
  height: 5vh;
  box-shadow: inset 0 8px 60px rgba(0, 0, 0, 0.1),
    inset 0 8px 8px rgba(0, 0, 0, 0.1), inset 0 -4px 4px rgba(0, 0, 0, 0.1);
}

.button-indicator {
  background-color: var(--text-primary);
  box-shadow: 0 8px 40px rgba(0, 0, 0, 0.2);
  transition: transform 0.3s ease-in-out;
  width: 1.4rem;
  padding: 1;
  height: 1.4rem;
  border-radius: 50%;
  position: absolute;
}

.button-icon-container {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.button-icon {
  color: var(--light-icon-color);
  font-size: 1.2rem;
  visibility: visible;
}

.animated {
  transform: rotate(360deg);
  transition: 0.6s ease-in-out;
}

/* ---------------DARK MODE--------------- */
.dark-mode .button-indicator {
  transform: translateX(2rem);
  background-color: var(--dark-color);
  box-shadow: 0 8px 40px rgba(0, 0, 0, 0.3);
}

.dark-mode .button-icon {
  color: var(--dark-icon-color);
}

.dark-mode .button {
  box-shadow: inset 0 8px 60px rgba(0, 0, 0, 0.3),
    inset 8px 0 8px rgba(0, 0, 0, 0.3), inset 0 -4px 4px rgba(0, 0, 0, 0.3);
}

/* ---------------MAIN CONTENT--------------- */
.headline {
  display: grid;
  align-items: center;
  justify-content: center;
}

.entry-title {
  display: grid;
  justify-content: center;
  align-items: center;
}

.entry-paragraph {
  margin-top: 2.5rem;
  margin-left: 4rem;
}

.paragraph-content .article-link {
  font-size: 1.6rem;
}

.starring-actors {
  margin-top: auto;
  margin-left: auto;
  display: flex;
}


.entry-card-icon {
  font-size: 1.6rem;
  font-family: "Open Sans";
  margin-right: 8px;
}

.article-link {
  text-decoration: none;
  color: black;
}

.entry-card {
  display: flex;
  flex-wrap: wrap;
  position: relative;
  flex-direction: row;
  background-color: white;
  margin: 1rem;
}

.image-container {
  content: "";
  position: relative;
  object-fit: contain;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 16rem; 
  height: 16rem;
}

.image-container img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.image-link {
  object-fit: contain;
}

.card-entry-content {
  flex: 1;
  display: flex;
  flex-direction: column;
  width: 16rem; 
  height: 16rem;
  box-shadow: 1px 3px 2px rgba(0,0,0,.25);
  border-radius: 5px;
}

.entry-card-container {
  display: flex;
  flex-direction: column;
  
}

